WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210856
[GTK4] Several fixes to GdkEvent APIs for GTK4
https://bugs.webkit.org/show_bug.cgi?id=210856
Summary
[GTK4] Several fixes to GdkEvent APIs for GTK4
Claudio Saavedra
Reported
2020-04-22 06:00:49 PDT
[GTK4] Several fixes to GdkEvent APIs for GTK4
Attachments
Patch
(10.63 KB, patch)
2020-04-22 06:01 PDT
,
Claudio Saavedra
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2020-04-22 06:01:18 PDT
Created
attachment 397187
[details]
Patch
EWS
Comment 2
2020-04-22 06:26:24 PDT
Committed
r260508
: <
https://trac.webkit.org/changeset/260508
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397187
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug