Source/WebCore/platform/gtk/GtkUtilities.cpp
@@ -76,7 +76,11 @@ WallTime wallTimeForEvent(const GdkEvent* event)
     // be using CLOCK_MONOTONIC for its monotonic time, and so long as
     // g_get_monotonic_time() continues to do so as well, and so long as
     // WTF::MonotonicTime continues to use g_get_monotonic_time().
+#if USE(GTK4)
+    auto time = gdk_event_get_time(const_cast<GdkEvent*>(event));
+#else
     auto time = gdk_event_get_time(event);
+#endif
     if (time == GDK_CURRENT_TIME)
         return WallTime::now();
     return MonotonicTime::fromRawSeconds(time / 1000.).approximateWallTime();
